; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_recog.c_validate_replace_src_1.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_recog.c_validate_replace_src_1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.validate_replace_src_data = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @validate_replace_src_1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @validate_replace_src_1(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.validate_replace_src_data*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.validate_replace_src_data*
  store %struct.validate_replace_src_data* %7, %struct.validate_replace_src_data** %5, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = load %struct.validate_replace_src_data*, %struct.validate_replace_src_data** %5, align 8
  %10 = getelementptr inbounds %struct.validate_replace_src_data, %struct.validate_replace_src_data* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.validate_replace_src_data*, %struct.validate_replace_src_data** %5, align 8
  %13 = getelementptr inbounds %struct.validate_replace_src_data, %struct.validate_replace_src_data* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.validate_replace_src_data*, %struct.validate_replace_src_data** %5, align 8
  %16 = getelementptr inbounds %struct.validate_replace_src_data, %struct.validate_replace_src_data* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @validate_replace_rtx_1(i32* %8, i32 %11, i32 %14, i32 %17)
  ret void
}

declare dso_local i32 @validate_replace_rtx_1(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
